11_minikube/_backups/backups/baywatch/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: baywatch
spec:
  selector:
    app: baywatch
  ports:
  - protocol: TCP
    port: 80
    targetPort: api
