11_minikube/_backups/backups/baywatch/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: baywatch
spec:
  rules:
    - host: "baywatch.192-168-49-2.nip.io"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: baywatch
                port:
                  number: 80
